refactor: Use ApiResponse in ProductController, CustomerController, OrderController
- Replace System.out.println with SLF4J Logger
- Use Constructor Injection for all controllers
- Remove debug logging code
- Consistent error handling across controllers
- Clean up exception handlers

Made-with: Cursor